<resources>
    <string name="app_name" translatable="false">My Energy</string>
    <string name="title_status">Status</string>
    <string name="title_charging">Charging</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="lbl_status_grid">Grid Feed-in</string>
    <string name="lbl_status_home">Home Consumption</string>
    <string name="lbl_status_ev">Charging Rate</string>
    <string name="lbl_status_pv">PV Production</string>
    <string name="title_autonomy">Autonomy</string>
    <string name="cp_title_plan">Charge Target</string>
    <string name="cp_title_until">Until</string>
    <string name="cp_title_state">Charge Level</string>
    <string name="cp_title_total">Total</string>
    <string name="btn_next">Next</string>
    <string name="btn_apply">Apply</string>
    <string name="cp_title_time">Charge Time</string>
    <string name="btn_cancel">Cancel</string>
    <string name="cp_title_from" >From</string>
    <string name="cp_title_duration" >Duration</string>
    <string name="login_title_ip">EV Charger IP Address</string>
    <string name="login_title_usr">User</string>
    <string name="login_title_passwd">Password</string>
    <string name="store_password">Store Password</string>
    <string name="title_setup">Setup</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_scan">Scan</string>
    <string name="desc_scan">Load settings from QR code</string>
    <string name="lbl_or">or</string>
    <string name="error_invalid_ip">%s is not a valid IPv4 address!</string>
    <string name="error_no_ip">Please specify the IP address!</string>
    <string name="error_no_user">Please enter your username!</string>
    <string name="error_no_passwd">Please enter your password!</string>
    <string name="sd_lbl_stop">Stop charging</string>
    <string name="mode_plan">Smart Charging</string>
    <string name="mode_excess">Excess Charging</string>
    <string name="sd_lbl_speed">Start fast charging</string>
    <string name="sd_desc">Show charging actions</string>
    <string name="lbl_battery_charge">Battery Charge</string>
    <string name="login_error">Login failed: %s</string>
    <string name="error_status">Unable to fetch live data: %s</string>
    <string name="error_charge_info">Communication error with charger: %s</string>
    <string name="error_charge_plan">Unable to plan charge: %s</string>
    <string name="mode_fast">Fast Charging</string>
    <string name="mode_disconnect">No EV connected</string>
    <string name="mode_stop">Charging paused</string>
    <string name="desc_stop">Charging was interrupted by user, ev or charger.</string>
    <string name="desc_fast">The connected ev is charged at the maximum available power.</string>
    <string name="desc_plan">Charge the ev by the desired amount until the target time, maximizing pv usage.</string>
    <string name="desc_excess">Use only excess pv power to charge the connected ev.</string>
    <string name="desc_disconnect">Connect your ev to the charger and select a mode to start charging.</string>
    <string name="value">Value: %s %s</string>
    <string name="category_qr" translatable="false">QR Code Import / Export</string>
    <string name="pref_qr_scan">Scan QR Code</string>
    <string name="pref_qr_gen">Generate QR Code</string>
    <string name="sum_qr_gen">Share your configuration with others by exporting it as QR code.\nShared settings do contain your password!</string>
    <string name="category_connect">Connected Chargers</string>
    <string name="pref_fetch_rate">Fetch rate</string>
    <string name="sum_demo">Display random data.\nAllows showcasing the app without connecting an EV Charger.</string>
    <string name="pref_demo">Demo Mode</string>
    <string name="sum_logout">Logout from current session and reconnect to an ev charger.</string>
    <string name="pref_logout" translatable="false">Logout</string>
    <string name="category_car">Car Properties</string>
    <string name="pref_car_battery">Battery Capacity</string>
    <string name="sum_car_battery">The usable capacity of the cars battery in kWh.</string>
    <string name="sum_car_wltp">Average energy consumption of the car in kWh/100km.</string>
    <string name="pref_car_wltp">Energy Consumption</string>
    <string name="pref_cp_amount">Default Amount</string>
    <string name="sum_cp_amount">How much should be charged by default in kWh.</string>
    <string name="category_cp">Smart Charging</string>
    <string name="sum_cp_time">How long charging should take by default in minutes.</string>
    <string name="pref_cp_title">Default Duration</string>
    <string name="sum_qr_scan">Configure the app by scanning a qr code. All settings will be overwritten by the ones from the QR code. Only scan codes you trust!</string>
    <string name="sum_fetch_rate">Interval between refreshing status data from the caharger in seconds.</string>
    <string name="category_quick_charge">Fast Charging</string>
    <string name="pref_quick_charge_speed_enabled">Override charge rate</string>
    <string name="sum_quick_charge_speed_enabled">Allow setting a custom charge speed in quick charge mode.\n<b>Setting a charge speed overwrites the max current in charger settings so be careful!</b></string>
    <string name="pref_quick_charge_max">AC-Current Max</string>
    <string name="sum_quick_charge_max">\u26A0\uFE0F <b>Do NEVER set this to a value higher than allowed by your net provider!</b>\n<b>In case of doubt, ask your electrician!</b></string>
    <string name="lbl_charge_rate_kW" translatable="false">%.1f kW</string>
    <string name="title_quick_charge_speed_reset">Reset charge limit?</string>
    <string name="desc_quick_charge_speed_reset">A max charging current of <b>%dA</b> was set. Reset it to <b>%dA</b> ?</string>
    <string name="lbl_inverter_model" translatable="false">Model: %s</string>
    <string name="lbl_inverter_ip" translatable="false">%s:%d</string>
    <string name="pref_inverters">PV Inverters</string>
    <string name="sum_inverters">Connect one or multiple pv inverters to the app over modbus to display their output.</string>
</resources>