<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_status">

    <fragment
        android:id="@+id/navigation_status"
        android:name="io.github.j0b10.mad.myenergy.ui.status.StatusFragment"
        android:label="@string/title_status"
        tools:layout="@layout/fragment_charging" />

    <fragment
        android:id="@+id/navigation_charging"
        android:name="io.github.j0b10.mad.myenergy.ui.charging.ChargingFragment"
        android:label="@string/title_charging"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="io.github.j0b10.mad.myenergy.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="io.github.j0b10.mad.myenergy.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>