<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.charging.ChargingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarStyle="insideOverlay" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <io.github.j0b10.mad.myenergy.ui.views.EnergyFlowView
                android:id="@+id/energyFlowView"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_margin="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="24dp"
                app:flowImage="@drawable/status_ev"
                app:flowLabel="@string/lbl_status_ev" />

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="24dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <io.github.j0b10.mad.myenergy.ui.views.BatteryView
                        android:id="@+id/charge_battery"
                        android:layout_width="72dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:batteryChargePrimary="0.0"
                        app:batteryChargeSecondary="0.0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/charge_guide1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/charge_guide1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.3" />

                    <TextView
                        android:id="@+id/charge_info"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:autoSizeTextType="none"
                        android:gravity="end|center_vertical"
                        android:maxLines="1"
                        android:text="00,0 kWh"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/charge_guide1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.32"
                        tools:ignore="HardcodedText" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/charge_guide2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/lbl_battery_charge"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/charge_guide2" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/chargemode_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </ScrollView>

    <com.leinardi.android.speeddial.SpeedDialOverlayLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.leinardi.android.speeddial.SpeedDialView
        android:id="@+id/speedDial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:tooltipText="@string/sd_desc"
        app:sdOverlayLayout="@id/overlay"
        app:sdMainFabAnimationRotateAngle="45"
        app:sdMainFabClosedBackgroundColor="?attr/colorSecondaryContainer"
        app:sdMainFabOpenedBackgroundColor="?attr/colorSecondaryContainer"
        app:sdMainFabOpenedIconColor="?attr/colorOnSecondaryContainer"
        app:sdMainFabClosedIconColor="?attr/colorOnSecondaryContainer"
        app:sdMainFabClosedSrc="@drawable/sd_charge"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Widget.Material3.FloatingActionButton.Primary"
        android:id="@+id/fab_stop_fast"
        android:visibility="gone"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/sd_lbl_stop"
        android:tooltipText="@string/sd_lbl_stop"
        android:src="@drawable/sd_stop"
        android:backgroundTint="?attr/colorErrorContainer"
        android:tint="?attr/colorOnErrorContainer" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Widget.Material3.FloatingActionButton.Primary"
        android:id="@+id/fab_start_fast"
        android:visibility="gone"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/sd_lbl_speed"
        android:tooltipText="@string/sd_lbl_speed"
        android:src="@drawable/sd_charge" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cp_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:elevation="20dp"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible" />

</FrameLayout>